# showcase

./: .env.example  .gitignore  .no_real_data  CLAUDE.md  README.md  pyproject.toml  runner.py
.github/workflows/: ci.yml
.streamlit/: config.toml
cases/: _protocols.py
cases/case01_excel_vendor_report/: README.md  meta.yaml  scenario.py
cases/case02_excel_invoice_validation/: README.md  meta.yaml  scenario.py
cases/case03_email_quote_dispatch/: README.md  meta.yaml  scenario.py
cases/case04_discord_overdue_alert/: README.md  meta.yaml  scenario.py
cases/case05_doc_quote_generator/: README.md  meta.yaml  scenario.py
cases/case06_hwpx_govt_form_filler/: README.md  meta.yaml  scenario.py
cases/case07_ocr_receipt_to_excel/: README.md  meta.yaml  scenario.py
cases/case08_ocr_invoice_to_csv/: README.md  meta.yaml  scenario.py
cases/case09_ai_email_drafter/: README.md  meta.yaml  scenario.py
cases/case10_ai_meeting_summarizer/: README.md  meta.yaml  scenario.py
core/: __init__.py  progress.py
core/ai/: client.py  prompts.py  tasks.py
core/backends/: __init__.py  cached.py  discord.py  factory.py  gmail.py  mlx.py  openrouter.py  protocols.py  safe.py
core/common/: config.py  demo_logger.py  logging.py  safe_mode.py  secrets_mask.py  timer.py
core/docgen/: pdf.py  template.py  word.py
core/excel/: merger.py  pivot.py  (+3 more)
memory/: MEMORY.md  critical-gaps.md  lessons.md
personas/: anonymization_policy.md  characters.md  company.md
scripts/: migrate_imports.py
specs/: 2026-05-08-phase3-design-v2.md  2026-05-08-phase3-design.md  2026-05-08-phase3-plan-v2.md  2026-05-08-phase3-plan.md  2026-05-12-phase3-audit.md  case10-whisper-decision.md  dod-n6-decision.md  phase2-external-usage-promise.md  rhwp-poc-decision.md
tests/: conftest.py  test_ai_client.py  test_ai_tasks.py  test_backend_contract_logging.py  test_backends_cached.py  test_backends_factory.py  test_backends_protocols.py  test_backends_safe.py  test_case01.py  test_case01_reuse.py  test_case01_scenario_signature.py  test_case02.py  test_case02_safe_isolation.py  test_case02_scenario_signature.py  test_case03_email_dispatch.py  test_case03_scenario_signature.py  test_case04_overdue_alert.py  test_case04_scenario_signature.py  test_case05_quote_generator.py  test_case05_scenario_signature.py  test_case06_hwpx_form_filler.py  test_case06_scenario_signature.py  test_case07_receipt_ocr.py  test_case07_scenario_signature.py  test_case08_invoice_ocr.py  test_case08_scenario_signature.py  test_case09.py  test_case09_scenario_signature.py  test_case10_meeting_summarizer.py  test_case10_scenario_signature.py  test_config.py  test_discord.py  test_docgen_hwp_preview.py  test_docgen_hwpx.py  test_docgen_pdf.py  test_docgen_template.py  test_docgen_word.py  test_excel_merger.py  test_excel_pivot.py  test_excel_writer.py  (+29 more)
tests/dogfood/: dogfood_smoke.py  fake_backend.py  pyproject.toml
web/: __init__.py  _inputs.py  _progress.py  _render.py  _runs.py  app.py
(+47 files in other folders)
