[project]
name = "ax-showcase"
version = "0.1.0"
description = "AX 사무자동화 케이스 쇼케이스"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "jinja2>=3.1",
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "discord-webhook>=1.3",
    "ollama>=0.4",
    "openai>=1.50",
    "pillow>=10.0",
    "rich>=13.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "faker>=30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
