[project]
name = "ax-showcase"
version = "0.1.0"
description = "AX 사무자동화 케이스 쇼케이스"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "jinja2>=3.1",
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "discord-webhook>=1.3",
    "ollama>=0.4",
    "openai>=1.50",
    "pillow>=10.0",
    "rich>=13.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "faker>=30.0",
    "lxml>=5.0",
    # NOTE: weasyprint는 T0에서 제외 — Pango/Cairo 등 system libs 의존성 (macOS: brew install pango cairo).
    # T5 (case05 docgen) 진입 시 폴백 결정 재검토 (weasyprint vs reportlab vs subprocess+md-to-pdf).
    # Plan deviation 5 disclosed.
    "jsonschema>=4.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "pandas-stubs>=2.2",
    "types-openpyxl>=3.1",
    "types-python-dateutil>=2.9",
    "types-PyYAML>=6.0",
    "mypy>=1.13",
    "types-jsonschema>=4.20",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[[tool.mypy.overrides]]
module = "discord_webhook"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hwpx_utils"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# T7b: googleapiclient and google_auth_oauthlib lack type stubs / py.typed.
# google.auth.transport.* and google.oauth2.* ARE typed and remain checked.
module = ["googleapiclient.*", "google_auth_oauthlib.*"]
ignore_missing_imports = true
